# web-cursova-backend

./: db.sqlite3  pyproject.toml
goods/: admin.py  models.py  serializers.py  views.py
goods/migrations/: 0001_initial.py  0002_alter_goods_options.py  0003_goods_quantity.py  0004_goods_manufacturer.py
order_status/: admin.py  apps.py  models.py  serializers.py  views.py
order_status/migrations/: 0001_initial.py  0002_alter_orderstatus_options.py
orders/: admin.py  models.py  serializers.py  views.py
orders/migrations/: 0001_initial.py  0002_remove_order_total_price_alter_order_comment.py  0003_alter_order_payment_method.py
rest_api/: settings.py  urls.py
users/: serializers.py  views.py
